--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Web Component</title>
     <meta name="description" content="Array frontend software engineer hiring test." />
+
+    <!-- page contains web components that use shadowDOM, must include font in root document https://github.com/mdn/interactive-examples/issues/887 -->
+    <link rel="stylesheet" href="https://cdn-web-assets.array.io/assets/css/euclid-fonts.8abeba6402d2a1e2efdb8c2ea40f9d81.css" />
 </head>
 
 <body>
