--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 
     <script type="module" src="array-credit-lock.js"></script>
-    <array-credit-lock tableDataUrl="test-1_data.json" />
+    <array-credit-lock tableDataUrl="/data/test-1_data.json" />
 
 </body>
 
