--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Web Component</title>
     <meta name="description" content="Array frontend software engineer hiring test." />
 
-    <!-- page contains web components that use shadowDOM, must include font in root document https://github.com/mdn/interactive-examples/issues/887 -->
+    <!-- page contains web components that use a shadowDOM, must include font in root document https://github.com/mdn/interactive-examples/issues/887 -->
     <link rel="stylesheet" href="https://cdn-web-assets.array.io/assets/css/euclid-fonts.8abeba6402d2a1e2efdb8c2ea40f9d81.css" />
 </head>
 
